fix gsap on mobile

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -21,6 +21,7 @@ body, p, .divide-body, .overview-content p, .contact-underline,
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
